# moon

backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9709fbc963bf_init.py
backend/src/: config.py  db.py  dependency.py  main.py  schema.py
backend/src/router/auth/: router.py
backend/src/router/sample/: router.py
backend/src/router/user/: router.py
backend/src/service/user/: config.py  model.py
frontend/: README.md  package-lock.json  package.json  quasar.config.js
frontend/src/boot/: axios.ts
frontend/src/client/: index.ts
frontend/src/client/models/: BearerResponse.ts  Body_auth_jwt_login_api_auth_jwt_login_post.ts  ErrorModel.ts  OAuth2AuthorizeResponse.ts  UserRead.ts  UserUpdate.ts
frontend/src/client/services/: AuthService.ts  UserService.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: DefaultPage.vue
frontend/src/pages/callback/: AuthPage.vue
frontend/src/pages/default/: UserPage.vue
frontend/src/pages/login/: LoginPage.vue
frontend/src/router/: index.ts  routes.ts
frontend/src/stores/: user-store.ts
frontend/src/utils/: auth.ts  jwt.ts
